alignment corrected

--- a/css/styles.css
+++ b/css/styles.css
@@ -147,8 +147,7 @@ body {
 
 .liked {
     height: 28px;
-    padding-bottom: 5px;
-    padding-left: 3px;
+    margin: 7px 7px 5px 7px;
 }
 
 .share {
